# coin-collector

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  client_main.cpp  client_render.cpp  client_sdl.cpp
core/: CMakeLists.txt  CmakeLists.txt  game_rules.cpp  game_rules.h  game_state.cpp  game_state.h  interpolation.cpp  interpolation.h  protocol.h  snapshot.cpp  snapshot.h  snapshot_queue.cpp  snapshot_queue.h
net/: CMakeLists.txt  connection.cpp  connection.h  latency.h  serializer.cpp  serializer.h  tcp_socket.cpp  tcp_socket.h
server/: CMakeLists.txt  server.h  server_lobby.cpp  server_loop.cpp  server_main.cpp
